crates/biome_js_parser/tests/js_test_suite/error/ts_type_alias_cannot_be_reserved_word.ts
type undefined = any;
type any = any;
type string = any;
